tests/errors/arena_get_oob_panics.ptt
use std/arena

spark {
  a is Arena of int()
  a.add(1)
  yell(a.get(4))
}
